Screens added. Colors added. Hilt and ViewModel added

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,14 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="backgroudColor">#FFF9F9F9</color>
+    <color name="mainColor">#FF1E88E5</color>
+    <color name="secondColor">#FF43A047</color>
+    <color name="textColor">#FF212121</color>
+    <color name="descriptionText">#FF757575</color>
+    <color name="errorColor">#FFE53935</color>
+    <color name="costColor">#FFFB8C00</color>
+
+
+
 </resources>
