--- a/app/src/main/res/layout/main_screen.xml
+++ b/app/src/main/res/layout/main_screen.xml
@@ -24,8 +24,8 @@
             android:layout_gravity="center"
             android:fontFamily="monospace"
             android:paddingTop="20dp"
-            android:text="TeknoModa"
-            android:textSize="24dp"
+            android:text="@string/app_name"
+            android:textSize="24sp"
             tools:layout_editor_absoluteX="142dp"
             tools:layout_editor_absoluteY="16dp" />
     </androidx.appcompat.widget.Toolbar>
@@ -39,7 +39,7 @@
         android:layout_marginEnd="104dp"
         android:focusable="false"
         android:focusableInTouchMode="false"
-        android:hint="Search"
+        android:hint="@string/mainScreenSearch"
         app:layout_constraintBottom_toTopOf="@+id/recyclerViewProducts"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -87,7 +87,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="3dp"
                 android:layout_marginEnd="12dp"
-                android:text="Konum"
+                android:text="@string/mainScreenLocation"
                 android:textColor="@color/costColor"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -100,11 +100,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
-                android:text="Lütfen k..."
+                android:text="@string/mainScreenPleaseL"
                 android:textAlignment="viewStart"
                 android:textSize="10sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView" />
+                app:layout_constraintTop_toBottomOf="@+id/textView"
+                tools:ignore="SmallSp" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
@@ -162,7 +163,7 @@
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_marginBottom="2dp"
-                android:src="@drawable/heart" />
+                android:src="@drawable/heart_border" />
 
 
         </LinearLayout>
@@ -179,7 +180,7 @@
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_marginBottom="2dp"
-                android:src="@drawable/cart" />
+                android:src="@drawable/my_cart" />
 
 
         </LinearLayout>
@@ -196,7 +197,7 @@
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_marginBottom="2dp"
-                android:src="@drawable/user" />
+                android:src="@drawable/acount" />
 
 
         </LinearLayout>
