--- a/app/src/main/res/layout/main_screen.xml
+++ b/app/src/main/res/layout/main_screen.xml
@@ -33,7 +33,7 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout"
         android:layout_width="0dp"
-        android:layout_height="45dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="104dp"
@@ -77,7 +77,7 @@
                 android:id="@+id/locationImage"
                 android:layout_width="20dp"
                 android:layout_height="18dp"
-                android:layout_marginTop="3dp"
+                android:layout_marginTop="12dp"
                 android:src="@drawable/location"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -86,11 +86,11 @@
                 android:id="@+id/locationText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="3dp"
+                android:layout_marginTop="12dp"
                 android:layout_marginEnd="12dp"
                 android:text="@string/mainScreenLocation"
                 android:textColor="@color/costColor"
-                android:textSize="12sp"
+                android:textSize="13sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/locationImage"
@@ -100,6 +100,7 @@
                 android:id="@+id/locationSecondText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
                 android:layout_marginEnd="8dp"
                 android:text="@string/mainScreenPleaseL"
                 android:textAlignment="viewStart"
