--- a/app/src/main/res/layout/product_details_screen.xml
+++ b/app/src/main/res/layout/product_details_screen.xml
@@ -82,35 +82,21 @@
         android:id="@+id/productNameText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="44dp"
         android:layout_marginTop="40dp"
         android:fontFamily="@font/metrophobic"
         android:text="Bilgisayar"
         android:textSize="30sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/productImageCard" />
-
-    <TextView
-        android:id="@+id/productPriceText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="74dp"
-        android:text="23000 TL"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toStartOf="@+id/addCartButton"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/productNameText" />
 
     <Button
         android:id="@+id/addCartButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginEnd="40dp"
         android:backgroundTint="@color/mainColor"
         android:drawableLeft="@drawable/add_cart"
         android:fontFamily="@font/metrophobic"
@@ -123,4 +109,64 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/productNameText" />
 
+    <TextView
+        android:id="@+id/productTotalPriceText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="88dp"
+        android:layout_marginEnd="74dp"
+        android:text="46000 TL"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toStartOf="@+id/addCartButton"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/productNameText" />
+
+    <TextView
+        android:id="@+id/productPriceText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="40dp"
+        android:text="23000 TL"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/productImageCard" />
+
+    <LinearLayout
+        android:id="@+id/quantityLayout"
+        android:layout_width="137dp"
+        android:layout_height="46dp"
+        android:layout_marginTop="16dp"
+        android:gravity="center"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/productNameText">
+
+        <ImageButton
+            android:id="@+id/btnMinus"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:background="@null"
+            android:src="@drawable/minus" />
+
+        <TextView
+            android:id="@+id/productCount"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:gravity="center"
+            android:textColor="#F57C00"
+            android:textSize="20sp"
+            tools:text="2" />
+
+        <ImageButton
+            android:id="@+id/btnPlus"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:background="@null"
+            android:src="@drawable/plus" />
+
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
