--- a/app/src/main/res/layout/favorite_screen.xml
+++ b/app/src/main/res/layout/favorite_screen.xml
@@ -4,11 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/backgroundColor"
-    tools:context=".ui.screens.MainScreen">
+    tools:context=".ui.screens.FavoriteScreen">
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/mainScreenToolbar"
+        android:id="@+id/toolbar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@color/backgroundColor"
@@ -22,38 +21,35 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:fontFamily="monospace"
-            android:paddingTop="20dp"
-            android:text="@string/app_name"
-            android:textSize="24sp"
-            tools:layout_editor_absoluteX="142dp"
-            tools:layout_editor_absoluteY="16dp" />
+            android:fontFamily="@font/metrophobic"
+            android:text="Favorilerim"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            tools:layout_editor_absoluteX="156dp"
+            tools:layout_editor_absoluteY="18dp" />
+
     </androidx.appcompat.widget.Toolbar>
 
-    <SearchView
-        android:id="@+id/searchView"
-        android:layout_width="0dp"
+    <TextView
+        android:id="@+id/emptyTextView"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:background="@drawable/search_view_background"
-        android:queryHint="@string/mainScreenSearch"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mainScreenToolbar" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewProducts"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_centerInParent="true"
+        android:text="Favoriler boş"
+        android:textColor="#888888"
+        android:visibility="gone"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/searchView" />
+        app:layout_constraintTop_toTopOf="parent" />
 
-
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/favoriteRecyclerView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 </androidx.constraintlayout.widget.ConstraintLayout>
