--- a/app/src/main/res/layout/my_cart_card_design.xml
+++ b/app/src/main/res/layout/my_cart_card_design.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/myCartCard"
+        android:id="@+id/favoriteCard"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -76,7 +76,7 @@
                     android:layout_height="32dp"
                     android:gravity="center"
                     android:textColor="#F57C00"
-                    android:textSize="16sp"
+                    android:textSize="18sp"
                     tools:text="1" />
 
                 <ImageButton
@@ -90,8 +90,8 @@
 
             <ImageView
                 android:id="@+id/trashImage"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
                 android:layout_marginTop="36dp"
                 android:layout_marginEnd="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
