--- a/app/src/main/res/layout/my_cart_screen.xml
+++ b/app/src/main/res/layout/my_cart_screen.xml
@@ -32,7 +32,19 @@
 
 
     </androidx.appcompat.widget.Toolbar>
-
+    <TextView
+        android:id="@+id/emptyTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="Sepetiniz Boş"
+        android:textColor="#888888"
+        android:visibility="gone"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/myCartRecyclerView"
         android:layout_width="0dp"
