Favorites, Cart screen text fix

--- a/app/src/main/res/layout/favorite_screen.xml
+++ b/app/src/main/res/layout/favorite_screen.xml
@@ -36,10 +36,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="Favoriler boş"
+        android:text="@string/favorite_empty"
         android:textColor="#888888"
-        android:visibility="gone"
         android:textSize="18sp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
